Django/ingress/ingress.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # SSL Settings
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:940168446867:certificate/dd064307-1d9a-4fcb-a51f-271f7b48a5af
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: www.mclabha.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-svc
            port: 
              number: 80
